add app icon made by /u/aphaits

--- a/Info.plist
+++ b/Info.plist
@@ -16,6 +16,8 @@
 	<true/>
 	<key>CFBundleExecutable</key>
 	<string>HRM</string>
+	<key>CFBundleIconFile</key>
+	<string>AppIcon</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 </dict>
